# Cpp-tutorial_cmake_make_yocto_gtest_gmock

./: CMakeLists.txt
include/: Board.h  Game.h
src/: Board.cpp  Game.cpp  main.cpp
test/: main.cpp
